applications/openeuler-quickissue-website-cn4/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
  name: openeuler-quickissue-website-ingress
  namespace: openeuler-quickissue-website
spec:
  rules:
  - host: quickissue.openeuler.openatom.cn
    http:
      paths:
      - backend:
          serviceName: openeuler-quickissue-website-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - quickissue.openeuler.openatom.cn
    secretName: openeuler-quickissue-website-tls
